<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.profs_13.menu.MainActivity">
    <item
        android:icon="@drawable/beer"
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <group
        android:id="@+id/group2">
    <item
        android:icon="@drawable/police"
        android:id="@+id/action_item1"
        android:orderInCategory="2"
        android:title="@string/action_item1"
        app:showAsAction="always" />
    </group>

    <group
        android:id="@+id/group1">

        <item
            android:id="@+id/action_item2"
            android:orderInCategory="2"
            android:title="@string/action_item2"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_item3"
            android:orderInCategory="3"
            android:title="@string/action_item3"
            app:showAsAction="never" />
    </group>


    <item
        android:id="@+id/action_item4"
        android:orderInCategory="4"
        android:title="@string/action_item4"
        app:showAsAction="never" />


</menu>
